--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,16 @@
   4v1469112559407" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 
   <!-- contact form -->
-
+  <form class="" action="#" method="post">
+    <label for="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" value="" placeholder="your name" required>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder = "your email" value="" required>
+    <label for="phone">Phone</label>
+    <input type="tel" id="phone" name="phone" placeholder="your phone (optional)" value="">
+    <label for="message"></label>
+    <textarea id="message" name="message" rows="10" cols="40"></textarea>
+    <input type="submit" value="send">
+  </form>
 </body>
 </html>
